--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,10 @@ body {
   border-right: solid;
   border-color: rgba(0, 22, 22, 0.4);
 }
-
+.me{
+  font-family:New Century Schoolbook, TeX Gyre Schola, serif;
+   text-decoration: underline;
+}
 header {
   color: black;
   margin: 10px;
